build: build CLI tool with jpackage, tested DEB installer on Ubuntu